# maplelegends-vote-reminder

./: .drone.jsonnet  .drone.yml  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  techstack.md  techstack.yml
.github/workflows/: docker.yml  terraform.yml
discord-bot/: Dockerfile  Makefile  README.md  pyproject.toml
discord-bot/discord_bot/: app.py  background_schedule.py  database.py  discord_client.py  jobs.py
docker/docker-entrypoint-initdb.d/: create-appuser.sh
docker/scripts/: deploy.sh
nginx/: nginx.conf
proxy-server/: Dockerfile  Makefile  pyproject.toml
proxy-server/proxy_server/: __init__.py  database.py
terraform/: cloudflare.tf  cloudflare.tfe
